# ai-s-combinator

./: .gitignore  .gitleaks.toml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Justfile  README.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: CONVERGENCE_REPORT.md  EXTENDED_BENCHMARK_REPORT.md  FULL_TRAINING_REPORT.md  GPT2_BENCHMARK_REPORT.md  INDEX.md  MEMORY_THROUGHPUT_REPORT.md  MULTI_MODEL_BENCHMARK_REPORT.md  VALIDATION_REPORT.md  WHITEPAPER.md
rust/: Cargo.toml
scripts/: bench_utils.py  benchmark_bert_base.json  benchmark_gpt_2_medium.json  benchmark_opt_350m.json  benchmark_pythia_410m.json  benchmark_t5_small.json  ci.sh  consolidate_hf_repos.py  convergence_experiment.py  convergence_gpt2-medium_results.json  convergence_mamba-130m_results.json  convergence_pythia-70m_results.json  convergence_resnet50_results.json  convergence_results.json  extended_benchmark.py  extended_benchmark_results.json  extended_bert-base_results.json  extended_efficientnet-b0_results.json  extended_gpt2-medium_results.json  extended_gpt2-small_results.json  extended_mamba-130m_results.json  extended_mamba-370m_results.json  extended_mobilenetv2_results.json  extended_opt-350m_results.json  extended_phi-2_results.json  extended_pythia-160m_results.json  extended_pythia-1b_results.json  extended_pythia-410m_results.json  extended_pythia-70m_results.json  extended_resnet50_results.json  extended_switch-base-8_results.json  extended_t5-small_results.json  extended_vit-base_results.json  full_training_pipeline.py  full_training_results.json  (+137 more)
(+65 files in other folders)
