[project]
name = "bwsk"
version = "0.1.0"
description = "Combinator-typed AI primitives: B (compose), W (share), S (fan-out), K (erase)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Tyler Zervas" },
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "detect-secrets>=1.4",
    "pip-audit>=2.7",
]
benchmark = [
    "transformers>=4.30",
    "datasets>=2.14",
    "accelerate>=0.20",
    "tqdm>=4.64",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bwsk"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["bwsk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]
